# rs-minimatch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/: compare.js  package-lock.json  package.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/benches/: core_benches.rs
crates/core/src/: api.rs  brace.rs  charclass.rs  escape.rs  lib.rs  matcher.rs  options.rs  path.rs  pattern.rs
crates/core/tests/: brace_compat.rs  brace_security.rs  minimatch_compat.rs  pattern_security.rs  smoke.rs
crates/core/tests/fixtures/: brace_bash_comparison.json  brace_targeted.json  minimatch_patterns.json
crates/napi/: Cargo.toml
crates/napi/src/: lib.rs
