[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/napi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["diluk angelo <dilukangelo@gmail.com>"]
license = "MIT"
repository = "https://github.com/dilukangelosl/rs-minimatch"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
