[package]
name = "rs-minimatch-cli"
description = "CLI for glob pattern matching, backed by rs-minimatch-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rs-minimatch"
path = "src/main.rs"

[dependencies]
rs-minimatch-core = { path = "../core" }
